--- a/koreacovid.Rmd
+++ b/koreacovid.Rmd
@@ -45,9 +45,11 @@ barchartGC(~result + Sex,data=kRdata, main ="Frequency Bar Chart")
   
 ### this bar chart is displaying in total frequency terms our data.  Clearly there are a lot less dead people than alive people as is reflected by the sizes of the bars in the display.  
 
+```{r}
+barchartGC(~result + Sex,data=kRdata,type="percent", main ="Percent Bar Chart")
+```
 
-
-
+The percentage of females dying is less than males. The percentage of males with the virus is less than the females but the rate of males dying is more than females.
 
   
 ## Numerical results
