--- a/koreacovid.Rmd
+++ b/koreacovid.Rmd
@@ -54,6 +54,13 @@ The percentage of females dying is less than males. The percentage of males with
   
 ## Numerical results
 
+```{r}
+table1 <- xtabs(~result + Sex, data=kRdata)
+rowPerc(table1)
+colPerc(table1)
+```
+Females alive is 56 percent and males is 44 percent.
+Females dead is 36 percent and males is 64 percent.
 
 ## Inferential results 
 
